# claude_repo

./: .gitignore  README.md  pyproject.toml
src/: .env.example  api_request.py  conversation.py  create_dataset.py  create_test_dataset.py  doc.txt  prompt.py  prompt_evals.py  prompt_evaluator.py  report_builder.py  request.py  retriever.py  tools_and_schemas  web_search_tool.py
src/cag/: image_prompt.py  pdf_prompt.py  text_prompt.py
src/code_execution_and_files_api/: code_execution_and_files_api.py
src/image_prompt/: image_prompt.py
src/mcp/: mcp_client.py  mcp_server.py
src/mcp/core/: cli_chat.py
src/prompt_evaluation/: create_dataset.py  prompt.py  prompt_evaluator.py
src/rag/: bm25_index.py  embeddings.py  orchestrator.py  vector_index.py
src/rag/chunking/: manual_chunking.py  pipeline_ocr.py  pipeline_pdf.py  pipeline_simple.py  pipeline_vlm.py
src/tool_use/: built_in_tool_schemas.py  text_editor_tool.py  text_editor_tool_functions.py  tools_and_schemas.py
