[project]
name = "claude_repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.107.1",
    "mcp[cli]>=1.27.2",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "numpy>=2.4.6",
    "voyageai>=0.4.0",
]



